# translation-studio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  llm_config.yaml.example  params.yaml  pyproject.toml  run_app.sh  setup.bat  setup.sh
src/: bootstrapper.py  services.py
src/api/: api_wrapper.py
src/app/: app.py
src/modules/: data_reader.py  model_config.py  openai_chain.py  openai_model.py  skills_dto.py  translation_prompt.py
src/utils/: logger.py  utils.py
